# KASURI

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vite.config.js  vitest.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: build-windows.yml
res/: generate_icon.ps1
src/: app.css  app.html  application.rs  application_repository.rs  default_settings.toml  fuzzy_sorter.rs  kasuri.rs  main.rs  powershell.rs  settings.rs
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: default_settings.toml  kasuri.rs  kasuri_app.rs  log.rs  mod.rs  settings.rs
src-tauri/src/model/: application.rs  mod.rs
src-tauri/src/repositories/: application_repository.rs  kasuri_repository.rs  mod.rs  repository_initializer.rs
src-tauri/src/scripts/: save_app_icon.ps1
src-tauri/src/service/: fuzzy_sorter.rs  mod.rs  powershell.rs
src-tauri/src/ui/: command.rs  event_handler.rs  mod.rs
src/core/: backend.test.ts  backend.ts  settings.ts
src/lib/: backend.ts
src/routes/: +layout.ts  +page.svelte
src/routes/settings.html/: +page.svelte
src/script/: get_app_icon.ps1  get_app_icon_4_store_app.ps1
src/scripts/: get_store_app.ps1
