[package]
name = "kasuri"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "KASURI"
path = "src/main.rs"

[dependencies]
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
walkdir = "2.5.0"
