[package]
name = "kasuri"
version = "0.1.0"
description = "A Tauri App"
authors = ["sAbIz"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kasuri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
tauri-plugin-opener = "2"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
sqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
walkdir = "2.5.0"
