[package]
name = "kasuri"
version = "0.1.0"
description = "A Tauri App"
authors = ["sAbIz"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
tauri = { version = "2", features = [
    "protocol-asset",
    "tray-icon",
    "config-toml",
    "unstable",
] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
sqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
walkdir = "2.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tauri-plugin-log = "2"
log = "0.4"
md-5 = "0.10.6"
open = "5.3.2"
tauri-plugin-global-shortcut = "2.2.1"
tauri-plugin-autostart = "2.3.0"
global-hotkey = "0.7.0"
